fixes per Natalie

--- a/Sandbox/Sandbox/Views/Home/Bump.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Bump.cshtml
@@ -1,25 +1,25 @@
 ﻿@{ Layout = "~/Views/Shared/_InternalPageLayout.cshtml";
-    ViewBag.Title = "Natalie Macellaio | Bump";
+ ViewBag.Title = "Natalie Macellaio | Resn Pushing Metal";
 }
 <section class="page-section" id="bump">
-     <div class="container">         
+    <div class="container">
         <div class="row">
             <article class="col-md-12 showcase-single-content white-bg">
                 <div class="row">
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <p class="font5"><span class="color-bg black ">bump</span></p>
-                                <h2 class="black add-top-quarter"><span>bump</span></h2>
-                                <h5 class="font3 black">2005</h5>
-                                <h3 class="font5 color">Resin and Metal</h3>
+                                <p class="font5"><span class="color-bg black ">BUMP, BULGE, BOILING OVER, CRACK, ROACH STUDY</span></p>
+                                <h2 class="black add-top-quarter"><span>RESIN PUSHING METAL</span></h2>
+                                <h5 class="font3 black">2006 - 2009</h5>
+                                <h3 class="font5 color">RESIN AND METAL</h3>
                             </div>
                         </div>
                     </article>
                     <article class="col-md-4 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <h3 class="sub-heading">This is the Story</h3>
+                                <h3 class="sub-heading">ARTIST STATEMENT</h3>
                                 <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nisl diam, laoreet quis eros ac, placerat tincidunt neque. Vivamus molestie, nisl eu accumsan elementum, libero neque aliquam nibh, in venenatis velit velit eget nunc. Aliquam non venenatis justo, vitae feugiat urna. Morbi et tempor purus.</p>
                             </div>
                         </div>
@@ -45,9 +45,99 @@
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Bump-side</h3>
                         </div>
-                     </article>
-                         </div>
-            </article>
+                    </article>
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Bulge - copper, resin 12x50x3" class="img-responsive custom-overlay-6" src="images/bulge/bulge-01.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Bulge -copper, resin 12x50x3</h3>
+                        </div>
+                    </article>
+                </div>
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Bulge-detail" class="img-responsive custom-overlay-6" src="images/bulge/bulge-02.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Bulge -detail</h3>
+                        </div>
+                    </article>
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Bulge-crawl" class="img-responsive custom-overlay-6" src="images/bulge/bulge-03.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Bulge -crawl</h3>
+                        </div>
+                    </article>
+                </div>
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Boiling Over, nickel, resin 12x12" class="img-responsive" src="~/images/boilingover/boil-01.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Boiling Over, nickel, resin 12x12</h3>
+                        </div>
+                    </article>
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Boiling Over, nickel, resin 12x12" class="img-responsive" src="~/images/boilingover/boil-02.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Boiling Over, detail 1</h3>
+                        </div>
+                    </article>
+                </div>
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Boiling Over, nickel, resin 12x12" class="img-responsive" src="~/images/boilingover/boil-03.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Boiling Over, detail 2</h3>
+                        </div>
+                    </article>
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Brood-silver, resin" class="img-responsive" src="images/crack/crack-01.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Crack, metal resin</h3>
+                        </div>
+                    </article>
+                </div>
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Brood-silver, resin" class="img-responsive" src="images/crack/crack-01.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Crack, metal resin</h3>
+                        </div>
+                    </article>
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Brood-silver, resin" class="img-responsive" src="images/crack/crack-02.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Crack, metal resin detail</h3>
+                        </div>
+                    </article>
+                </div>
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Brood-silver, resin" class="img-responsive" src="images/crack/crack-03.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Crack, metal resin detail2</h3>
+                        </div>
+                    </article>
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Roach Study, metal resin" class="img-responsive" src="images/roachstudy/roach-01.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Roach Study, metal resin</h3>
+                        </div>
+                    </article>
+                </div>
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Roach Study, metal resin detail" class="img-responsive" src="images/roachstudy/roach-02.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Roach Study, metal resin detail</h3>
+                        </div>
+                    </article>
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Roach Study, metal resin detail2" class="img-responsive" src="images/roachstudy/roach-03.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Roach Study, metal resin detail2</h3>
+                        </div>
+                    </article>                
+                </div>
+</article>
         </div>
     </div>
 </section>
