--- a/Sandbox/Sandbox/Views/Home/Crack.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Crack.cshtml
@@ -27,22 +27,22 @@
                         </div>
                     </article>
                 </div>
-                <div class="row">
-                    <article class="col-md-6 showcase-thumb-strip">
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
                         <img alt="Natalie Macellaio - Brood-silver, resin" class="img-responsive" src="images/crack/crack-01.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Crack, metal resin</h3>
                         </div>
                     </article>
-                    <article class="col-md-6 showcase-thumb-strip">
+                    <article class="col-md-6">
                         <img alt="Natalie Macellaio - Brood-silver, resin" class="img-responsive" src="images/crack/crack-02.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Crack, metal resin detail</h3>
                         </div>
                     </article>
                 </div>
-                <div class="row">
-                    <article class="col-md-6 showcase-thumb-strip">
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
                         <img alt="Natalie Macellaio - Brood-silver, resin" class="img-responsive" src="images/crack/crack-03.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Crack, metal resin detail2</h3>
