--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{  Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Natalie Macellaio | Metal Sculptor";
+  ViewBag.Title = "Natalie Macellaio | Metal Sculptor";
 }
 <section class="intro-02-wrap page-section" id="home">
     <div class="container-fluid">
@@ -7,19 +7,19 @@
             <div id="works-container" class="works-container white-bg clearfix">
                 <div class="works-item works-item-one-third zoom">
                     <img alt="scribbles collection" class="img-responsive" src="~/images/scribbles/scrib-01.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" data-overlay="#BD8CBF" data-type="iframe" href="~/Scribbles">
+                    <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" href="~/Scribbles">
                         <div class="works-item-inner valign">
                             <h3 class="black">New Work</h3>
-                            <p class="white"><span class="black-bg">Scribbles</span></p>
+                            <p class="white"><span class="black-bg">METAL BROOCHES</span></p>
                         </div>
                     </a>
                 </div>
                 <div class="works-item works-item-one-third zoom">
                     <img alt="kids rings collection" class="img-responsive" src="~/images/kidsrings/kring-01.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Kids-Rings">
+                    <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" href="~/Kids-Rings">
                         <div class="works-item-inner valign">
                             <h3 class="black">New Work</h3>
-                            <p class="white"><span class="black-bg">Kids Rings</span></p>
+                            <p class="white"><span class="black-bg">INTERACTIVE RINGS</span></p>
                         </div>
                     </a>
                 </div>
@@ -28,132 +28,64 @@
                     <a href="#about">
                         <div class="works-item-inner valign">
                             <h3 class="black">About</h3>
-                            <p class="white"><span class="black-bg">the artist</span></p>
+                            <p class="white"><span class="black-bg">THE ARTIST</span></p>
+                        </div>
+                    </a>
+                </div>
+                <div class="works-item works-item-one-third zoom">
+                    <img alt="Collaborations" title="The Motherload Project" class="img-responsive" src="~/images/motherload/motherload-02.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" data-slide-index="#motherload" href="~/The-Mother-Load-Project">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">Collaborations</h3>
+                            <p class="white"><span class="black-bg">THE MOTHER LOAD PROJECT</span></p>
                         </div>
                     </a>
                 </div>
                 <div class="works-item works-item-one-third zoom">
                     <img alt="piercing pieces" class="img-responsive" src="~/images/piercing/piercing-01.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Piercing-Pieces">
+                    <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" href="~/Piercing-Pieces">
                         <div class="works-item-inner valign">
-                            <h3 class="black">New Work</h3>
-                            <p class="white"><span class="black-bg">Piercing Pieces</span></p>
+                            <h3 class="black">WALL INSTALLATION</h3>
+                            <p class="white"><span class="black-bg">A MEMORY</span></p>
                         </div>
                     </a>
-                </div>
-                <div class="works-item works-item-one-third zoom">
-                    <img alt="New Work - Pump" class="img-responsive" src="~/images/newwork/pump.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/New-work">
-                        <div class="works-item-inner valign">
-                            <h3 class="black">New Work</h3>
-                            <p class="white"><span class="black-bg">Pump</span></p>
-                        </div>
-                    </a>
-                </div>
+                </div>              
                 <div class="works-item works-item-one-third zoom">
                     <img alt="Resin and Metal - Resin balls" class="img-responsive" src="~/images/resinballs/resinballs-01.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" title="Resin Balls" href="~/Resin-Balls">
+                    <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" title="Resin Balls" href="~/Resin-Balls">
                         <div class="works-item-inner valign">
                             <h3 class="black">Resin and Metal</h3>
-                            <p class="white"><span class="black-bg">Resin Balls</span></p>
+                            <p class="white"><span class="black-bg">B.S., RED DOT, SWARM</span></p>
                         </div>
                     </a>
                 </div>
-
                 <div class="works-item works-item-one-third zoom">
-                    <img alt="Resin bump on Metal" class="img-responsive" src="~/images/bump/bump-01.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Bump">
+                    <img alt="Resin Pushing Metal" class="img-responsive" src="~/images/crack/crack-01.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" href="~/Bump">
                         <div class="works-item-inner valign">
-                            <h3 class="black">Resin and Metal</h3>
-                            <p class="white"><span class="black-bg">Bump</span></p>
+                            <h3 class="black">Resin PUshing Metal</h3>
+                            <p class="white"><span class="black-bg">BUMP - BULGE - BOILING OVER - ROACH STUDY</span></p>
                         </div>
                     </a>
                 </div>
                 <div class="works-item works-item-one-third zoom">
-                    <img alt="Resin Bulge on Metal" class="img-responsive" src="~/images/bulge/bulge-01.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Bulge">
-                        <div class="works-item-inner valign">
-                            <h3 class="black">Resin and Metal</h3>
-                            <p class="white"><span class="black-bg">Bulge</span></p>
-                        </div>
-                    </a>
-                </div>
-                <div class="works-item works-item-one-third zoom">
-                    <img alt="Boiling Over, resin metal" class="img-responsive" src="~/images/boilingover/boil-01.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Boiling-Over">
-                        <div class="works-item-inner valign">
-                            <h3 class="black">Resin and Metal</h3>
-                            <p class="white"><span class="black-bg">Boiling Over</span></p>
-                        </div>
-                    </a>
-                </div>
-                <div class="works-item works-item-one-third zoom">
-                    <img alt="Resin Crack on metal" class="img-responsive" src="~/images/crack/crack-01.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Crack">
-                        <div class="works-item-inner valign">
-                            <h3 class="black">Resin and Metal</h3>
-                            <p class="white"><span class="black-bg">Crack</span></p>
-                        </div>
-                    </a>
-                </div>
-                <div class="works-item works-item-one-third zoom">
-                    <img alt="Roach Study on Metal" class="img-responsive" src="~/images/roachstudy/roach-01.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Roach-Study">
-                        <div class="works-item-inner valign">
-                            <h3 class="black">Resin and Metal</h3>
-                            <p class="white"><span class="black-bg">Roach Study</span></p>
-                        </div>
-                    </a>
-                </div>
-                <div class="works-item works-item-one-third zoom">
-                    <img alt="resin brood on post" class="img-responsive" src="~/images/brood/brood-01.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Brood">
-                        <div class="works-item-inner valign">
-                            <h3 class="black">Resin and Metal</h3>
-                            <p class="white"><span class="black-bg">Brood</span></p>
-                        </div>
-                    </a>
-                </div>
-                <div class="works-item works-item-one-third zoom">
-                    <img alt="resin brood on post" class="img-responsive" src="~/images/cracks/cracks-14.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Cracks">
-                        <div class="works-item-inner valign">
-                            <h3 class="black">Cracks</h3>
-                            <p class="white"><span class="black-bg">Earth to Art Cracks</span></p>
-                        </div>
-                    </a>
-                </div>
-                <div class="works-item works-item-one-third zoom">
-                    <img alt="resin brood on post" class="img-responsive" src="~/images/occupy/occupancy-04.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Occupancy">
+                    <img alt="Occupancy Installation" class="img-responsive" src="~/images/occupy/occupancy-04.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" href="~/Occupancy">
                         <div class="works-item-inner valign">
                             <h3 class="black">Occupancy</h3>
-                            <p class="white"><span class="black-bg">Occupancy and Combat</span></p>
+                            <p class="white"><span class="black-bg">OCCUPANCY AND COMBAT</span></p>
                         </div>
                     </a>
                 </div>
                 <div class="works-item works-item-one-third zoom">
-                    <img alt="New Work" class="img-responsive" src="~/images/scribbles/scrib-02.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" title="Yellow and Blue" href="~/images/scribbles/scrib-02.jpg">
+                    <img alt="resin brood on post" class="img-responsive" src="~/images/cracks/cracks-01.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" href="~/Shifting">
                         <div class="works-item-inner valign">
-                            <h3 class="black">New Work</h3>
-                            <p class="white"><span class="black-bg">Toddler Scribbles</span></p>
+                            <h3 class="black">shifting</h3>
+                            <p class="white"><span class="black-bg">SHIFTING EXHIBIT</span></p>
                         </div>
                     </a>
                 </div>
-
-
-                <div class="works-item works-item-one-third zoom">
-                    <img alt="Collaborations" title="The Motherload Project" class="img-responsive" src="~/images/motherload/motherload-02.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" data-slide-index="#motherload" href="~/The-Mother-Load-Project">
-                        <div class="works-item-inner valign">
-                            <h3 class="black">Collaborations</h3>
-                            <p class="white"><span class="black-bg">The Motherload Project</span></p>
-                        </div>
-                    </a>
-                </div>
-
-
 
 
             </div>
@@ -166,9 +98,9 @@
         <div class="row">
             <article class="col-md-6 about-content-split text-center common-pad softwhite-bg">
                 <div class="valign">
-                    <img src="~/images/about/profile-01.jpg" />
-                    <h1 class="black font5 promo-caps">Natalie Macllaio </h1><h2 class="color">MFA metal sculptor</h2>
-                    
+                    <img class="img-responsive" src="~/images/about/profile-02.jpg" />
+                    <h1 class="color font5 promo-caps">NATALIE MACELLAIO</h1><h2 class="color"></h2>
+
                 </div>
             </article>
             <article class="col-md-6 about-content-split text-left common-pad white-bg">
