--- a/Sandbox/Sandbox/Views/Home/Occupancy.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Occupancy.cshtml
@@ -1,8 +1,8 @@
 ﻿@{ Layout = "~/Views/Shared/_InternalPageLayout.cshtml";
-    ViewBag.Title = "Natalie Macellaio | Kids Rings";
+    ViewBag.Title = "Natalie Macellaio | Occupancy";
 }
 
-<section class="page-section" id="kidsrings">
+<section class="page-section" id="occupancy">
     <div class="container">
         <div class="row">
             <article class="col-md-12 showcase-single-content white-bg">
@@ -10,30 +10,30 @@
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <p class="font5"><span class="color-bg black ">Occupancy and Combat</span></p>
-                                <h2 class="black add-top-quarter"><span>Resin, Clay, and Silver</span></h2>
-                                <h5 class="font3 black">2012</h5>
-                                <h4 class="font5 dark">Occupancy</h4>
+                                <p class="font5"><span class="color-bg black">Occupancy and Combat</span></p>
+                                <h2 class="black add-top-quarter"><span>OCCUPANCY INSTALLATION</span></h2>
+                                <h5 class="font3 black">2009</h5>
+                                <h4 class="font5 dark">PLASTIC, CLAY, SILVER, GOLD</h4>
                             </div>
                         </div>
                     </article>
                     <article class="col-md-4 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <h3 class="sub-heading">This is the Story</h3>
+                                <h3 class="sub-heading">ARTIST STATEMENT</h3>
                                 <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nisl diam, laoreet quis eros ac, placerat tincidunt neque. Vivamus molestie, nisl eu accumsan elementum, libero neque aliquam nibh, in venenatis velit velit eget nunc. Aliquam non venenatis justo, vitae feugiat urna. Morbi et tempor purus.</p>
                             </div>
                         </div>
                     </article>
                 </div>
-                <div class="row">
-                    <article class="col-md-6 showcase-thumb-strip">
-                    <img alt="Natalie Macellaio - Occupancy -1" class="img-responsive" src="images/occupy/occupancy-04.jpg" />
-                    <div class="showcase-thumb-strip-inner">
-                        <h3 class="black">Occupancy -1</h3>
-                    </div>
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Occupancy -1" class="img-responsive" src="images/occupy/occupancy-04.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Occupancy -1</h3>
+                        </div>
                     </article>
-                    <article class="col-md-6 showcase-thumb-strip">
+                    <article class="col-md-6">
                         <img alt="Natalie Macellaio - Occupancy -2" class="img-responsive" src="images/occupy/occupancy-01.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Occupancy -2</h3>
@@ -41,27 +41,27 @@
                     </article>
                 </div>
                 <div class="row showcase-thumb-strip">
-                    <article class="col-md-6 showcase-thumb-strip">
+                    <article class="col-md-6">
                         <img alt="Natalie Macellaio - Occupancy -3" class="img-responsive" src="images/occupy/occupancy-02.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Occupancy -3</h3>
                         </div>
                     </article>
-                    <article class="col-md-6 showcase-thumb-strip">
+                    <article class="col-md-6">
                         <img alt="Natalie Macellaio - Occupancy -4" class="img-responsive" src="images/occupy/occupancy-03.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Occupancy -4</h3>
                         </div>
                     </article>
                 </div>
-                <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-6 showcase-thumb-strip">
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
                         <img alt="Natalie Macellaio - Occupancy -5" class="img-responsive" src="images/occupy/occupancy-05.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Occupancy -5</h3>
                         </div>
                     </article>
-                    <article class="col-md-6 showcase-thumb-strip">
+                    <article class="col-md-6">
                         <img alt="Natalie Macellaio - Occupancy -6" class="img-responsive" src="images/occupy/occupancy-06.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Occupancy -6</h3>
@@ -69,14 +69,14 @@
                     </article>
                     
                 </div>
-                <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-6 showcase-thumb-strip">
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
                         <img alt="Natalie Macellaio - Occupancy -7" class="img-responsive" src="images/occupy/occupancy-07.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Occupancy -7</h3>
                         </div>
                     </article>
-                    <article class="col-md-6 showcase-thumb-strip">
+                    <article class="col-md-6">
                         <img alt="Natalie Macellaio - Occupancy -8" class="img-responsive" src="images/occupy/occupancy-08.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Occupancy -8</h3>
