--- a/Sandbox/Sandbox/Views/Home/ResinBalls.cshtml
+++ b/Sandbox/Sandbox/Views/Home/ResinBalls.cshtml
@@ -11,17 +11,17 @@
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <p class="font5"><span class="color-bg black ">Resin Balls - what do you see?</span></p>
-                                <h2 class="black add-top-quarter"><span>Resin Balls</span></h2>
-                                <h5 class="font3 black">2005, 2010</h5>
-                                <h4 class="font5 dark">Resin and Metal</h4>
+                                <p class="font5"><span class="color-bg black ">Resin</span></p>
+                                <h2 class="black add-top-quarter"><span>B.S., RED DOT, SWARM</span></h2>
+                                <h5 class="font3 black">2005 - 2009</h5>
+                                <h4 class="font5 dark">RESIN AND METAL</h4>
                             </div>
                         </div>
                     </article>
                     <article class="col-md-4 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <h3 class="sub-heading">This is the Story</h3>
+                                <h3 class="sub-heading">ARTIST STATEMENT</h3>
                                 <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nisl diam, laoreet quis eros ac, placerat tincidunt neque. Vivamus molestie, nisl eu accumsan elementum, libero neque aliquam nibh, in venenatis velit velit eget nunc. Aliquam non venenatis justo, vitae feugiat urna. Morbi et tempor purus.</p>
                             </div>
                         </div>
