--- a/Sandbox/Sandbox/Views/Home/Scribbles.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Scribbles.cshtml
@@ -11,17 +11,17 @@
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <p class="font5"><span class="color-bg black ">Metal Designs from Toddler's Art</span></p>
+                                <p class="font5"><span class="color-bg black ">new work</span></p>
                                 <h2 class="black add-top-quarter"><span>Scribbles Collection</span></h2>
-                                <h5 class="font3 black">2014</h5>
-                                <h3 class="font5 color">new work</h3>
+                                <h5 class="font3 black">2014 - 2015</h5>
+                                <h3 class="font5 color">annodized alunimum and sterling silver</h3>
                             </div>
                         </div>
                     </article>
                     <article class="col-md-4 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <h3 class="sub-heading">Scribble Story</h3>
+                                <h3 class="sub-heading">artist statement</h3>
                                 <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nisl diam, laoreet quis eros ac, placerat tincidunt neque. Vivamus molestie, nisl eu accumsan elementum, libero neque aliquam nibh, in venenatis velit velit eget nunc. Aliquam non venenatis justo, vitae feugiat urna. Morbi et tempor purus.</p>
                             </div>
                         </div>
