--- a/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
         <div class="sticky-panel sticky-panel-bottom white-bg"></div>
         <header class="masthead visible-lg white-bg">
             <div class="main-logo-wrap">
-                <a href="~/Index"><img alt="Natalie Macellaio - Metal Artist, logo" title="Natalie Macellaio - Metal Artist, home page" src="~/images/logo.png" /></a>
+                <a href="~/Index"><img alt="Natalie Macellaio - Artist, logo" title="Natalie Macellaio - Metal Artist, home page" src="~/images/logo.png" /></a>
             </div>
             <div class="main-nav">
                 <div class="mobile-toggle">
@@ -49,9 +49,9 @@
                     <span></span>
                 </div>
             </div>
-            <a href="~/Index"><img alt="Natalie Macellaio - Metal Artist, logo" title="Natalie Macellaio - Metal Artist, home page" class="side-logo" src="~/images/side-logo.png" /></a>
+            <a href="~/Index"><img alt="Natalie Macellaio - Artist, logo" title="Natalie Macellaio - Metal Artist, home page" class="side-logo" src="~/images/side-logo.png" /></a>
                 <div class="nav-bio">
-                    <h4><span class="color font1">Natalie Macellaio <br />3D Metal Sculptor</span></h4>
+                    <h4><span class="color font1">Natalie Macellaio <br />ARTIST</span></h4>
                 </div>
                 <nav class="nav-item-wrap">
                     <ul class="main-nav-menu main-nav-menu-effect">
@@ -61,41 +61,36 @@
                         <li class="trigger-sub-nav">
                             <a class="main-nav-link" href="#">work</a>
                             <div class="sub-nav">
-                                <a href="~/Scribbles">Scribbles</a>
-                                <a href="~/Kids-Rings">Kids-Rings</a>
-                                <a href="~/Piercing-Pieces">Piercing-Pieces</a>
-                                <a href="~/Resin-Balls">Resin-Balls</a>
-                                <a href="~/Bump">Bump</a>
-                                <a href="~/Bulge">Bulge</a>
-                                <a href="~/Brood">Brood</a>
-                                <a href="~/Boiling-Over">Boiling-Over</a>
-                                <a href="~/Crack">Crack</a>
-                                <a href="~/Roach-Study">Roach-Study</a>  
-                                <a href="~/Cracks">Cracks</a>
-                                <a href="~/Occupancy">Occupancy</a>
+                                <a href="~/Scribbles">METAL BROOCHES</a>
+                                <a href="~/Kids-Rings">INTERACTIVE RINGS</a>
+                                <a href="~/Piercing-Pieces">A MEMORY</a>
+                                <a href="~/Resin-Balls">RESIN</a>
+                                <a href="~/Bump">RESIN PUSHING METAL</a>                               
+                                <a href="~/Cracks">SHIFTING</a>
+                                <a href="~/Occupancy">OCCUPANCY</a>
                             </div>
                         </li>
                         <li class="trigger-sub-nav">
                             <a class="main-nav-link" href="#">collaborations</a>
                             <div class="sub-nav">
-                                <a href="~/The-Mother-Load-Project">The Motherload Project</a>
-                                <a href="#wannabe">Wannabe</a>
-                                <a href="#petite">Petite Show</a>
-                                <a href="#merger">The Merger</a>
-                                <a href="#trestle">Trestle Designs</a>
+                                <a href="~/The-Mother-Load-Project">THE MOTHER LOAD PROJECT</a>
+                                <a href="#wannabe">WANNABEE</a>
+                                <a href="#petite">PETITE SHOW</a>
+                                <a href="#merger">THE MERGER</a>
+                                <a href="#trestle">TRESTLE DESIGNS</a>
                             </div>
                         </li>
                         <li class="trigger-sub-nav">
-                            <a class="main-nav-link" href="#">about</a>
+                            <a class="main-nav-link" href="#">ABOUT</a>
                             <div class="sub-nav">
-                                <a href="~/Index/#about">my bio</a>
-                                <a href="~/Index/#contact">contact me</a>
+                                <a href="~/Index/#about">MY BIO</a>
+                                <a href="~/Index/#contact">CONTACT ME</a>
                             </div>
                         </li>
                     </ul>
                 </nav>
                 <ul class="social-wrap">
-                    <li><a href="#"><img alt="" title="" src="~/images/social/01.png" /></a></li>
+                    <li><a href="#"><img alt="" title="" src="" /></a></li>
                 </ul>
         </header>
             <nav class="mobile-nav hidden-lg">
@@ -106,35 +101,30 @@
                 <li>
                     <a class="sub-collapser" href="">work</a>
                     <ul>
-                        <li><a class="font2 black ease" href="~/Scribbles">Scribbles</a></li>
-                        <li><a class="font2 black ease" href="~/Kids-Rings">Kids Rings</a></li>
-                        <li><a class="font2 black ease" href="~/Piercing-Pieces">Piercing-Pieces</a></li>
-                        <li><a class="font2 black ease" href="~/Resin-Balls">Resin-Balls</a></li>
-                        <li><a class="font2 black ease" href="~/Bump">Bump</a></li>
-                        <li><a class="font2 black ease" href="~/Bulge">Bulge</a></li>
-                        <li><a class="font2 black ease" href="~/Brood">Brood</a></li> 
-                        <li><a class="font2 black ease" href="~/Boiling-Over">Boiling-Over</a></li>
-                        <li><a class="font2 black ease" href="~/Crack">Crack</a></li>
-                        <li><a class="font2 black ease" href="~/Roach-Study">Roach-Study</a></li>                        
-                        <li><a class="font2 black ease" href="~/Cracks">Cracks</a></li>
-                        <li><a class="font2 black ease" href="~/Occupancy">Occupancy</a></li>
+                        <li><a class="font2 black ease" href="~/Scribbles">METAL BROOCHES</a></li>
+                        <li><a class="font2 black ease" href="~/Kids-Rings">INTERACTIVE RINGS</a></li>
+                        <li><a class="font2 black ease" href="~/Piercing-Pieces">A MEMORY</a></li>
+                        <li><a class="font2 black ease" href="~/Resin-Balls">RESIN</a></li>
+                        <li><a class="font2 black ease" href="~/Bump">RESIN PUSHING METAL</a></li>
+                        <li><a class="font2 black ease" href="~/Cracks">SHIFTING</a></li>
+                        <li><a class="font2 black ease" href="~/Occupancy">OCCUPANCY</a></li>                        
                      </ul>
                 </li>
                 <li>
                     <a class="sub-collapser" href="">collaborations</a>
                     <ul>
-                        <li><a class="font2 black ease" href="~/The-Mother-Load-Project">The Motherload Project</a></li>
-                        <li><a class="font2 black ease" href="#wannabe">Wannabe</a></li>
-                        <li><a class="font2 black ease" href="#petite">Petite Show</a></li>
-                        <li><a class="font2 black ease" href="#merger">The Merger</a></li>
-                        <li><a class="font2 black ease" href="#trestle">Trestle Designs</a></li>
+                        <li><a class="font2 black ease" href="~/The-Mother-Load-Project">THE MOTHER LOAD PROJECT</a></li>
+                        <li><a class="font2 black ease" href="#wannabe">WANNABEE</a></li>
+                        <li><a class="font2 black ease" href="#petite">PETITE SHOW</a></li>
+                        <li><a class="font2 black ease" href="#merger">THE MERGER</a></li>
+                        <li><a class="font2 black ease" href="#trestle">TRESTLE DESIGNS</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a class="sub-collapser" href="">about</a>
+                    <a class="sub-collapser" href="">ABOUT</a>
                     <ul>
-                        <li><a class="font2 black ease" href="#about">my bio</a></li>
-                        <li><a class="font2 black ease" href="#contact">contact me</a></li>
+                        <li><a class="font2 black ease" href="#about">MY BIO</a></li>
+                        <li><a class="font2 black ease" href="#contact">CONTACT ME</a></li>
                     </ul>
                 </li>
             </ul>
@@ -144,7 +134,7 @@
             <footer>
                 <div class="add-top-quarter">
                     <div class="float-right">
-                        <p>&copy; @DateTime.Now.Year - Natalie Macellaio - Metal Artist</p>
+                        <p>&copy; @DateTime.Now.Year - Natalie Macellaio - Artist</p>
                     </div>
                 </div>
             </footer>
