--- a/Sandbox/Sandbox/Views/Home/KidsRings.cshtml
+++ b/Sandbox/Sandbox/Views/Home/KidsRings.cshtml
@@ -11,17 +11,17 @@
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <p class="font5"><span class="color-bg black ">Playful Rings inspiried by Toddlers</span></p>
-                                <h2 class="black add-top-quarter"><span>Kids Rings</span></h2>
+                                <p class="font5"><span class="color-bg black ">new work</span></p>
+                                <h2 class="black add-top-quarter"><span>interactive rings</span></h2>
                                 <h5 class="font3 black">2014</h5>
-                                <h4 class="font5 dark">New Work</h4>
+                                <h4 class="font5 dark">stering silver and mixed media</h4>
                             </div>
                         </div>
                     </article>
                     <article class="col-md-4 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <h3 class="sub-heading">This is the Story</h3>
+                                <h3 class="sub-heading">artist statement</h3>
                                 <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nisl diam, laoreet quis eros ac, placerat tincidunt neque. Vivamus molestie, nisl eu accumsan elementum, libero neque aliquam nibh, in venenatis velit velit eget nunc. Aliquam non venenatis justo, vitae feugiat urna. Morbi et tempor purus.</p>
                             </div>
                         </div>
@@ -31,33 +31,33 @@
                     <article class="col-md-6">
                         <img alt="Natalie Macellaio - Fina's Ring" class="img-responsive custom-overlay-6 " src="images/kidsrings/kring-01.jpg" />
                         <div class="showcase-thumb-strip-inner">
-                            <h3 class="black">Fina's Ring</h3>
-                        </div>
-                    </article>
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Fina's Ring Detail" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-02.jpg" />
-                        <div class="showcase-thumb-strip-inner">
-                            <h3 class="black">Fina's Ring, Detail</h3>
-                        </div>
-                    </article>
-                </div>
-                <div class="row showcase-thumb-strip">
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Milo's Ring" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-03.jpg" />
-                        <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Milo's Ring</h3>
                         </div>
-                     </article>
+                    </article>
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Milo's Ring Detail" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-04.jpg" />
+                        <img alt="Natalie Macellaio - Fina's Ring Detail" class="img-responsive" src="images/kidsrings/kring-02.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Milo's Ring, Detail</h3>
                         </div>
                     </article>
                 </div>
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Milo's Ring" class="img-responsive" src="images/kidsrings/kring-03.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Fina's Ring</h3>
+                        </div>
+                     </article>
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Milo's Ring Detail" class="img-responsive" src="images/kidsrings/kring-04.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Fina's Ring, Detail</h3>
+                        </div>
+                    </article>
+                </div>
                 <div class="row showcase-thumb-strip zoom">
                     <article class="col-md-12 col-md-push-1">
-                        <img alt="Natalie Macellaio - Balloon Ring" class="img-responsive custom-overlay" src="images/kidsrings/kring-05.jpg" />
+                        <img alt="Natalie Macellaio - Balloon Ring" class="img-responsive" src="images/kidsrings/kring-05.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Balloon Ring</h3>
                         </div>
