--- a/Sandbox/Sandbox/Views/Home/PiercingPieces.cshtml
+++ b/Sandbox/Sandbox/Views/Home/PiercingPieces.cshtml
@@ -11,17 +11,17 @@
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <p class="font5"><span class="color-bg black ">Wall sculpture installation by Natalie</span></p>
-                                <h2 class="black add-top-quarter"><span>Piercing Pieces</span></h2>
-                                <h5 class="font3 black">2014</h5>
-                                <h3 class="font5 dark">New work</h3>
+                                <p class="font5"><span class="color-bg black ">Wall installation</span></p>
+                                <h2 class="black add-top-quarter"><span>a memory</span></h2>
+                                <h5 class="font3 black">2010</h5>
+                                <h3 class="font5 dark">pierced nickel and silver</h3>
                             </div>
                         </div>
                     </article>
                     <article class="col-md-4 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <h3 class="sub-heading">This is the Story</h3>
+                                <h3 class="sub-heading">artist statement</h3>
                                 <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nisl diam, laoreet quis eros ac, placerat tincidunt neque. Vivamus molestie, nisl eu accumsan elementum, libero neque aliquam nibh, in venenatis velit velit eget nunc. Aliquam non venenatis justo, vitae feugiat urna. Morbi et tempor purus.</p>
                             </div>
                         </div>
@@ -57,9 +57,9 @@
                 </div>
                 <div class="row showcase-thumb-strip">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - a memory detail -1" class="img-responsive custom-overlay-6" src="~/images/piercing/piercing-05.jpg" />
+                        <img alt="Natalie Macellaio - a memory detail -1" class="img-responsive" src="~/images/piercing/piercing-05.jpg" />
                         <div class="showcase-thumb-strip-inner">
-                            <h3 class="black">a memory detail -1l</h3>
+                            <h3 class="black">a memory detail -1</h3>
                         </div>
                      </article>
                     <article class="col-md-6">
