--- a/Sandbox/Sandbox/Views/Home/RoachStudy.cshtml
+++ b/Sandbox/Sandbox/Views/Home/RoachStudy.cshtml
@@ -27,22 +27,22 @@
                         </div>
                     </article>
                 </div>
-                <div class="row ">
-                    <article class="col-md-6 showcase-thumb-strip">
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
                         <img alt="Natalie Macellaio - Roach Study, metal resin" class="img-responsive" src="images/roachstudy/roach-01.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Roach Study, metal resin</h3>
                         </div>
                     </article>
-                    <article class="col-md-6 showcase-thumb-strip">
+                    <article class="col-md-6">
                         <img alt="Natalie Macellaio - Roach Study, metal resin detail" class="img-responsive" src="images/roachstudy/roach-02.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Roach Study, metal resin detail</h3>
                         </div>
                     </article>
                 </div>
-                <div class="row">
-                    <article class="col-md-6 showcase-thumb-strip">
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
                         <img alt="Natalie Macellaio - Roach Study, metal resin detail2" class="img-responsive" src="images/roachstudy/roach-03.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Roach Study, metal resin detail2</h3>
