--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{  Layout = "~/Views/Shared/_Layout.cshtml";
-  ViewBag.Title = "Natalie Macellaio | Metal Sculptor";
+  ViewBag.Title = "Natalie Macellaio | Artist";
 }
 <section class="intro-02-wrap page-section" id="home">
     <div class="container-fluid">
@@ -108,7 +108,7 @@
                 <p class="dark">
                     My work marries a functional, aesthetic, and conceptual approach to metal. She
                     works with concepts of adornment to create works that use the body to engage in
-                    conversations that draw directly from her personal life. !
+                    conversations that draw directly from her personal life.
                 </p><p>
                     “I was trained as a jeweler years ago, which brought me to understand the intricacies
                     of creating work that is personal to each person wearing it and expresses parts of their
@@ -121,18 +121,14 @@
                     expression that allows me to create intimate pieces that explore the relationships I have
                     to my children.”
                 </p>
-
-
-                <!--        <p>
-                    Many years ago, I became interested in the relationship and similarities between humans and the things that humans perceive as being infectious.  Influenced by a nasty roach infestation in an ill-advised apartment choice, I was first horrified, then fascinated by the resilience of these creatures.  It occurred to me that these creatures share a tenacity for survival and structure.  This influenced a body of work that has remained at the core of my practice.
+                <p>Many years ago, I became interested in the relationship and similarities between humans and the things that humans perceive as being infectious.  Influenced by a nasty roach infestation in an ill-advised apartment choice, I was first horrified, then fascinated by the resilience of these creatures.  It occurred to me that these creatures share a tenacity for survival and structure.  This influenced a body of work that has remained at the core of my practice.
                     Extrapolating human culture on a macro scale, it seemed to me that absent of human emotions and inflection, our own culture exists as a sort of infestation.  Over a long enough time span, our building, tearing down, and rebuilding creates a history...a carcass that can be just as interesting as the culture behind it...as is the case with roaches.  So, in this vein, I decided to look deeper into this history.
-
                     With that, it seemed that the only real individuality was in the flaws.  Cracks...the most basic of flaws, have their own depth, length and integrity.  At the heart of it, the cracks are all that is unique.  Cracks show age.  They can hint at stress points and loose narratives.  They can give clues to lapses in craftsmanship and structural integrity.  They, in essence, are the story.
-                </p><p>
-                                            I have chosen to work with precious metals because of their innate strengths and weaknesses.  I value silver, both for its culturally relevant quality, and for its beauty.  I employ copper for its strength and abundance.  I am, after all, interested in creating something beautiful and desirable.  I have meticulously created “flaws” in these materials.  I use the perception of beauty and strength to juxtapose these “flaws” and make them more apparent and salient.
-                                        </p><p>
-                                            While the cracks in the concrete on the street or in my apartment or on a tombstone are the source of inspiration, I am hoping that by bringing them deliberately to the fore by “crafting the crack”, I am making a statement about the most overlooked source of beauty in humanity...our flaws.
-                                            </p>-->
+                </p>
+                <p>I have chosen to work with precious metals because of their innate strengths and weaknesses.  I value silver, both for its culturally relevant quality, and for its beauty.  I employ copper for its strength and abundance.  I am, after all, interested in creating something beautiful and desirable.  I have meticulously created “flaws” in these materials.  I use the perception of beauty and strength to juxtapose these “flaws” and make them more apparent and salient.
+                </p>
+                <p>While the cracks in the concrete on the street or in my apartment or on a tombstone are the source of inspiration, I am hoping that by bringing them deliberately to the fore by “crafting the crack”, I am making a statement about the most overlooked source of beauty in humanity...our flaws.
+                </p>
 
                 <h3 class="sub-heading font2 black add-top-half">Profiles</h3>
                 <ul class="profile-list">
