--- a/Sandbox/Sandbox/Views/Home/Shifting.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Shifting.cshtml
@@ -1,8 +1,8 @@
 ﻿@{ Layout = "~/Views/Shared/_InternalPageLayout.cshtml";
-    ViewBag.Title = "Natalie Macellaio | Cracks";
+    ViewBag.Title = "Natalie Macellaio | Shifting";
 }
 
-<section class="page-section" id="Cracks">
+<section class="page-section" id="Shifting">
     <div class="container">
  
         <div class="row">
@@ -11,47 +11,49 @@
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <p class="font5"><span class="color-bg black ">Cracks from nature to art</span></p>
-                                <h2 class="color font1 add-top-quarter"><span>Cracking</span></h2>
-                                <h5 class="font3 black">2008 - 2014</h5>
-                                <h3 class="font5 color">Cracks</h3>
+                                <p class="font5"><span class="color-bg black ">Shifting Exhibition</span></p>
+                                <h2 class="color font1 add-top-quarter"><span>Shifting</span></h2>
+                                <h5 class="font3 black">2010</h5>
+                                <h3 class="font5 color">STERLING SILVER, NICKEL SILVER,  MIXED MEDIA</h3>
                             </div>
                         </div>
                     </article>
                     <article class="col-md-4 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <h3 class="sub-heading">This is the Story</h3>
-                                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nisl diam, laoreet quis eros ac, placerat tincidunt neque. Vivamus molestie, nisl eu accumsan elementum, libero neque aliquam nibh, in venenatis velit velit eget nunc. Aliquam non venenatis justo, vitae feugiat urna. Morbi et tempor purus.</p>
+                                <h3 class="sub-heading">ARTIST STATEMENT</h3>
+                                <p class="dark">                               
+                                    While the cracks in the concrete on the street or in my apartment or on a tombstone are the source of inspiration, I am hoping that by bringing them deliberately to the fore by “crafting the crack”, I am making a statement about the most overlooked source of beauty in humanity...our flaws.
+                                </p>
                             </div>
                         </div>
                     </article>
                 </div>
-                <div class="row">
-                    <article class="col-md-6 showcase-thumb-strip">
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
                         <img alt="Natalie Macellaio - Silver Cracks in metal -1" class="img-responsive" src="~/images/cracks/cracks-14.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Silver Cracks in Metal -1</h3>
                         </div>
                     </article>
-                    <article class="col-md-6 showcase-thumb-strip">
+                    <article class="col-md-6">
                         <img alt="Natalie Macellaio - Silver Cracks in metal -2" class="img-responsive" src="~/images/cracks/cracks-16.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Silver Cracks in Metal -2</h3>
                         </div>
                     </article>
                 </div>
-                <div class="row">
-                    <article class="col-md-6 showcase-thumb-strip">
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
                         <img alt="Natalie Macellaio - Metal Shifting -1" class="img-responsive" src="~/images/cracks/cracks-01.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Metal Shifting -1</h3>
                         </div>
                     </article>
-                    <article class="col-md-6 showcase-thumb-strip">
+                    <article class="col-md-6">
                         <img alt="Natalie Macellaio - Silver Cracks in metal -2" class="img-responsive" src="~/images/cracks/cracks-02.jpg" />
                         <div class="showcase-thumb-strip-inner">
-                            <h3 class="black">Metal Shifting -1</h3>
+                            <h3 class="black">Metal Shifting -2</h3>
                         </div>
                     </article>
                 </div>
@@ -65,7 +67,7 @@
                     <article class="col-md-6 showcase-thumb-strip">
                         <img alt="Natalie Macellaio - Shifting - Ouch -1" class="img-responsive" src="~/images/cracks/cracks-05.jpg" />
                         <div class="showcase-thumb-strip-inner">                           
-                            <h3 class="black">Shifting Ouch -1</h3>
+                            <h3 class="black">Shifting -1</h3>
                         </div>
                     </article>
                 </div>
@@ -73,7 +75,7 @@
                     <article class="col-md-6 showcase-thumb-strip">
                         <img alt="Natalie Macellaio - Shifting - Ouch -2" class="img-responsive" src="~/images/cracks/cracks-04.jpg" />
                         <div class="showcase-thumb-strip-inner">
-                            <h3 class="black">Shifting - Ouch -2</h3>
+                            <h3 class="black">Shifting -2</h3>
                         </div>
                     </article>
                     <article class="col-md-6 showcase-thumb-strip">
